Fix arrow SVG issue on iOS devices

--- a/_sass/layout/_get-advice.scss
+++ b/_sass/layout/_get-advice.scss
@@ -60,6 +60,10 @@
         @media (min-width: $container) {
             width: 80%;
         }
+
+        svg {
+            width: 100%;
+        }
     }
 
     &__title {
